--- a/g.html
+++ b/g.html
@@ -9,6 +9,15 @@
     <!-- Add manifest file -->
     <link rel="manifest" href="/manifest.json">
 </head>
+
+    <style>
+
+        body{
+            background-color: "rgb(60,60,60)";
+        }
+        
+    </style>
+    
 <body>
     <!-- Your website content here -->
 </body>
