--- a/g.html
+++ b/g.html
@@ -13,7 +13,7 @@
     <style>
 
         body{
-            background-color: "rgb(60,60,60)";
+            background-color: rgb(60,60,60);
         }
         
     </style>
