--- a/g.html
+++ b/g.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Your website description here">
+    <meta name="theme-color" context="#009578">
     <title>Your Website Title</title>
     
     <!-- Add manifest file -->
